// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows for deleting recoverable schedules by 1 1`] = `
Object {
  "accounts": Object {},
  "attempts": 0,
  "data": Object {
    "billing": Object {
      "city": null,
      "country": null,
      "state": null,
      "streetAddress": null,
      "streetAddress2": null,
      "zip": null,
    },
    "payment": Object {
      "account": null,
      "cardNumber": null,
      "ccv": null,
      "expiration": null,
      "name": null,
      "routing": null,
      "type": "cc",
    },
    "personal": Object {
      "campus": null,
      "campusId": null,
      "email": null,
      "firstName": null,
      "lastName": null,
    },
  },
  "errors": Object {},
  "recoverableSchedules": Object {
    "2": "TESTING",
  },
  "reminderDate": null,
  "savedAccount": Object {
    "id": null,
    "name": null,
    "payment": Object {
      "accountNumber": null,
      "paymentType": null,
    },
  },
  "schedule": Object {
    "frequency": null,
    "start": null,
  },
  "scheduleToRecover": null,
  "state": "default",
  "step": 1,
  "total": 0,
  "transactionType": "default",
  "transactions": Object {},
  "url": "",
  "userId": null,
}
`;

exports[`allows for removing all recovered schedule 1`] = `
Object {
  "accounts": Object {},
  "attempts": 0,
  "data": Object {
    "billing": Object {
      "city": null,
      "country": null,
      "state": null,
      "streetAddress": null,
      "streetAddress2": null,
      "zip": null,
    },
    "payment": Object {
      "account": null,
      "cardNumber": null,
      "ccv": null,
      "expiration": null,
      "name": null,
      "routing": null,
      "type": "cc",
    },
    "personal": Object {
      "campus": null,
      "campusId": null,
      "email": null,
      "firstName": null,
      "lastName": null,
    },
  },
  "errors": Object {},
  "recoverableSchedules": Object {},
  "reminderDate": null,
  "savedAccount": Object {
    "id": null,
    "name": null,
    "payment": Object {
      "accountNumber": null,
      "paymentType": null,
    },
  },
  "schedule": Object {
    "frequency": null,
    "start": null,
  },
  "scheduleToRecover": null,
  "state": "default",
  "step": 1,
  "total": 0,
  "transactionType": "default",
  "transactions": Object {},
  "url": "",
  "userId": null,
}
`;

exports[`allows for setting a recovered schedule 1`] = `
Object {
  "accounts": Object {},
  "attempts": 0,
  "data": Object {
    "billing": Object {
      "city": null,
      "country": null,
      "state": null,
      "streetAddress": null,
      "streetAddress2": null,
      "zip": null,
    },
    "payment": Object {
      "account": null,
      "cardNumber": null,
      "ccv": null,
      "expiration": null,
      "name": null,
      "routing": null,
      "type": "cc",
    },
    "personal": Object {
      "campus": null,
      "campusId": null,
      "email": null,
      "firstName": null,
      "lastName": null,
    },
  },
  "errors": Object {},
  "recoverableSchedules": Object {},
  "reminderDate": null,
  "savedAccount": Object {
    "id": null,
    "name": null,
    "payment": Object {
      "accountNumber": null,
      "paymentType": null,
    },
  },
  "schedule": Object {
    "frequency": null,
    "start": null,
  },
  "scheduleToRecover": Object {
    "1": "TEST",
  },
  "state": "default",
  "step": 1,
  "total": 0,
  "transactionType": "default",
  "transactions": Object {},
  "url": "",
  "userId": null,
}
`;

exports[`allows for setting multiple recoverable schedules 1`] = `
Object {
  "accounts": Object {},
  "attempts": 0,
  "data": Object {
    "billing": Object {
      "city": null,
      "country": null,
      "state": null,
      "streetAddress": null,
      "streetAddress2": null,
      "zip": null,
    },
    "payment": Object {
      "account": null,
      "cardNumber": null,
      "ccv": null,
      "expiration": null,
      "name": null,
      "routing": null,
      "type": "cc",
    },
    "personal": Object {
      "campus": null,
      "campusId": null,
      "email": null,
      "firstName": null,
      "lastName": null,
    },
  },
  "errors": Object {},
  "recoverableSchedules": Object {
    "1": "TEST",
    "2": "TESTING",
  },
  "reminderDate": null,
  "savedAccount": Object {
    "id": null,
    "name": null,
    "payment": Object {
      "accountNumber": null,
      "paymentType": null,
    },
  },
  "schedule": Object {
    "frequency": null,
    "start": null,
  },
  "scheduleToRecover": null,
  "state": "default",
  "step": 1,
  "total": 0,
  "transactionType": "default",
  "transactions": Object {},
  "url": "",
  "userId": null,
}
`;

exports[`doesn't delete anything if no id is found 1`] = `
Object {
  "accounts": Object {},
  "attempts": 0,
  "data": Object {
    "billing": Object {
      "city": null,
      "country": null,
      "state": null,
      "streetAddress": null,
      "streetAddress2": null,
      "zip": null,
    },
    "payment": Object {
      "account": null,
      "cardNumber": null,
      "ccv": null,
      "expiration": null,
      "name": null,
      "routing": null,
      "type": "cc",
    },
    "personal": Object {
      "campus": null,
      "campusId": null,
      "email": null,
      "firstName": null,
      "lastName": null,
    },
  },
  "errors": Object {},
  "recoverableSchedules": Object {
    "2": "TESTING",
  },
  "reminderDate": null,
  "savedAccount": Object {
    "id": null,
    "name": null,
    "payment": Object {
      "accountNumber": null,
      "paymentType": null,
    },
  },
  "schedule": Object {
    "frequency": null,
    "start": null,
  },
  "scheduleToRecover": null,
  "state": "default",
  "step": 1,
  "total": 0,
  "transactionType": "default",
  "transactions": Object {},
  "url": "",
  "userId": null,
}
`;

exports[`test allows for deleting recoverable schedules by 1 1`] = `
Object {
  "accounts": Object {},
  "attempts": 0,
  "data": Object {
    "billing": Object {
      "city": null,
      "country": null,
      "state": null,
      "streetAddress": null,
      "streetAddress2": null,
      "zip": null,
    },
    "payment": Object {
      "account": null,
      "cardNumber": null,
      "ccv": null,
      "expiration": null,
      "name": null,
      "routing": null,
      "type": "cc",
    },
    "personal": Object {
      "campus": null,
      "campusId": null,
      "email": null,
      "firstName": null,
      "lastName": null,
    },
  },
  "errors": Object {},
  "recoverableSchedules": Object {
    "2": "TESTING",
  },
  "reminderDate": null,
  "savedAccount": Object {
    "id": null,
    "name": null,
    "payment": Object {
      "accountNumber": null,
      "paymentType": null,
    },
  },
  "schedule": Object {
    "frequency": null,
    "start": null,
  },
  "scheduleToRecover": null,
  "state": "default",
  "step": 1,
  "total": 0,
  "transactionType": "default",
  "transactions": Object {},
  "url": "",
  "userId": null,
}
`;

exports[`test allows for removing all recovered schedule 1`] = `
Object {
  "accounts": Object {},
  "attempts": 0,
  "data": Object {
    "billing": Object {
      "city": null,
      "country": null,
      "state": null,
      "streetAddress": null,
      "streetAddress2": null,
      "zip": null,
    },
    "payment": Object {
      "account": null,
      "cardNumber": null,
      "ccv": null,
      "expiration": null,
      "name": null,
      "routing": null,
      "type": "cc",
    },
    "personal": Object {
      "campus": null,
      "campusId": null,
      "email": null,
      "firstName": null,
      "lastName": null,
    },
  },
  "errors": Object {},
  "recoverableSchedules": Object {},
  "reminderDate": null,
  "savedAccount": Object {
    "id": null,
    "name": null,
    "payment": Object {
      "accountNumber": null,
      "paymentType": null,
    },
  },
  "schedule": Object {
    "frequency": null,
    "start": null,
  },
  "scheduleToRecover": null,
  "state": "default",
  "step": 1,
  "total": 0,
  "transactionType": "default",
  "transactions": Object {},
  "url": "",
  "userId": null,
}
`;

exports[`test allows for setting a recovered schedule 1`] = `
Object {
  "accounts": Object {},
  "attempts": 0,
  "data": Object {
    "billing": Object {
      "city": null,
      "country": null,
      "state": null,
      "streetAddress": null,
      "streetAddress2": null,
      "zip": null,
    },
    "payment": Object {
      "account": null,
      "cardNumber": null,
      "ccv": null,
      "expiration": null,
      "name": null,
      "routing": null,
      "type": "cc",
    },
    "personal": Object {
      "campus": null,
      "campusId": null,
      "email": null,
      "firstName": null,
      "lastName": null,
    },
  },
  "errors": Object {},
  "recoverableSchedules": Object {},
  "reminderDate": null,
  "savedAccount": Object {
    "id": null,
    "name": null,
    "payment": Object {
      "accountNumber": null,
      "paymentType": null,
    },
  },
  "schedule": Object {
    "frequency": null,
    "start": null,
  },
  "scheduleToRecover": Object {
    "1": "TEST",
  },
  "state": "default",
  "step": 1,
  "total": 0,
  "transactionType": "default",
  "transactions": Object {},
  "url": "",
  "userId": null,
}
`;

exports[`test allows for setting multiple recoverable schedules 1`] = `
Object {
  "accounts": Object {},
  "attempts": 0,
  "data": Object {
    "billing": Object {
      "city": null,
      "country": null,
      "state": null,
      "streetAddress": null,
      "streetAddress2": null,
      "zip": null,
    },
    "payment": Object {
      "account": null,
      "cardNumber": null,
      "ccv": null,
      "expiration": null,
      "name": null,
      "routing": null,
      "type": "cc",
    },
    "personal": Object {
      "campus": null,
      "campusId": null,
      "email": null,
      "firstName": null,
      "lastName": null,
    },
  },
  "errors": Object {},
  "recoverableSchedules": Object {
    "1": "TEST",
    "2": "TESTING",
  },
  "reminderDate": null,
  "savedAccount": Object {
    "id": null,
    "name": null,
    "payment": Object {
      "accountNumber": null,
      "paymentType": null,
    },
  },
  "schedule": Object {
    "frequency": null,
    "start": null,
  },
  "scheduleToRecover": null,
  "state": "default",
  "step": 1,
  "total": 0,
  "transactionType": "default",
  "transactions": Object {},
  "url": "",
  "userId": null,
}
`;

exports[`test doesn't delete anything if no id is found 1`] = `
Object {
  "accounts": Object {},
  "attempts": 0,
  "data": Object {
    "billing": Object {
      "city": null,
      "country": null,
      "state": null,
      "streetAddress": null,
      "streetAddress2": null,
      "zip": null,
    },
    "payment": Object {
      "account": null,
      "cardNumber": null,
      "ccv": null,
      "expiration": null,
      "name": null,
      "routing": null,
      "type": "cc",
    },
    "personal": Object {
      "campus": null,
      "campusId": null,
      "email": null,
      "firstName": null,
      "lastName": null,
    },
  },
  "errors": Object {},
  "recoverableSchedules": Object {
    "2": "TESTING",
  },
  "reminderDate": null,
  "savedAccount": Object {
    "id": null,
    "name": null,
    "payment": Object {
      "accountNumber": null,
      "paymentType": null,
    },
  },
  "schedule": Object {
    "frequency": null,
    "start": null,
  },
  "scheduleToRecover": null,
  "state": "default",
  "step": 1,
  "total": 0,
  "transactionType": "default",
  "transactions": Object {},
  "url": "",
  "userId": null,
}
`;
